修改文件: 小程序触底加载更多的实现.md

--- a/小程序触底加载更多的实现.md
+++ b/小程序触底加载更多的实现.md
@@ -1,7 +1,7 @@
 # 小程序触底加载更多内容的实现
 
 ## 首先看看展示效果
-
+`Tips：`下面gif图2.7MB左右，网络不好可能加载有问题
 ![](https://www.github.com/kingshuaishuai/static_resource/raw/master/assets/0bd9f6dd716003f3818d15d2e211ee73.gif)
 
 ## 实现思路
@@ -13,7 +13,7 @@
 5. 没有更多数据的提示
 
 **优化项**
-1. 防止多次请求
+1. 防止连续的多次请求
 2. 封装：如何在多个页面应用同一套实现代码
 
 ## 功能的实现
@@ -92,7 +92,7 @@ class Products {
 通过构造一个Products类，模拟数据库以及对数据库的请求。
 * 静态属性`store`代表数据库中的数据，
 * `_getDataTemplate`对数据格式进行组装，模拟后端对数据的处理，
-* `getPorductList`方法模拟请求后端数据，每次请求默认5条数据，可以配置请求数据条数与请求页数，最终将数据进行包装后返回一个经过promise。
+* `getPorductList`方法模拟请求后端数据，每次请求默认5条数据，可以配置请求数据条数与请求页数，最终将数据进行包装后返回一个promise。
 
 ### loading组件的封装
 一个项目的loading风格是统一的，这里选择了易用性而舍弃了灵活性。
@@ -148,3 +148,57 @@ async onLoad (options) {
 进入页面在没有触发触底事件时，应当加载一组数据进行正常的显示。所以选择在`onLoad`生命周期中进行。
 这里创建了`Products`类的实例`productModel`方便后续向后端发送请求获取数据。紧接着调用该实例的`getPorductList`方法，并传入请求页与每页显示数据条数获取第一组数据，并将其更新到data中。
 最后调用`lin-ui`提供的[瀑布流组件](http://doc.mini.7yue.pro/component/layout/water-flow.html#%E4%BD%BF%E7%94%A8%E6%96%B9%E6%B3%95)进行数据的渲染。
+
+### 触底加载更多数据与请求的优化
+
+``` javascript
+  onReachBottom: function () {
+    console.log('触底')
+    if(!this.data.loadingShow) {
+      console.log('请求')
+      if (this.data.currentPage >= this.data.productModel.total_page) {
+        this.setData({
+          loadingShow: true,
+          loadingStatus: false
+        })
+      } else {
+        this.setData({
+          loadingShow: true,
+          currentPage: this.data.currentPage + 1,
+        })
+        setTimeout(() => {
+          this.getPorductList()
+        }, 3000)
+      }
+    }
+  },
+  
+  async getPorductList() {
+    const products = await this.data.productModel.getPorductList({
+      count: this.data.pageCount,
+      page: this.data.currentPage
+    })
+    this.setData({
+      products,
+    })
+    this.renderWaterFlow();
+  },
+```
+`onReachBottom`是小程序提供的触底事件处理方法，我们可以将触底后需要做的操作放在此函数中运行。
+
+在这个函数中先忽略最外层的`if`语句，剩余代码判断了当前展示的数据是不是最后一页的数据：
+* 如果是的话就不再进行数据的请求，并将loading组件显示出来，loading状态设为false，进行`没有更多数据`提示的相关展示。
+* 如果当前展示的数据没有到最后一页，则应请求下一页数据，并将loading组件加载出来，loading状态为加载状态。这里使用setTimeout模拟了发送和接收请求这段等待的时间。
+
+`getPorductList`方法里对（模拟的）后端进行了请求并做了数据设置，之后调用`renderWaterFlow`进行瀑布流的展示，在`lin-ui`瀑布流函数的回调中，可以设置将`loadingShow`为`false`隐藏loading组件。
+
+**连续请求的优化**
+上面提到先忽略`onReachBottom`最外层的if语句，这里来看看这个if语句解决了什么问题，上面代码中可以看到有两个`console`打印语句，一个是`触底`一个是`请求`，当网络稍微差的时候，我们可以在没有接收到请求数据的时候触发多次触底事件，这是不合理的，所以加了这个if语句，判断是否在loading了，如果在loading，则表明正在请求数据，就不应该再发送请求，否则再继续进行请求的逻辑。
+
+### 封装的考虑
+上面的功能已经完成，但还可以做很多优化，比如最起码在`onLoad`和`onReachBottom`写很多代码看起来让人很不舒服。
+但更重要的并不是这个问题，而是我们这个触底请求数据可能要在多个页面中用到，如何只写一份代码就能让不同的页面使用这个功能就显得很重要了。
+在接触这个作业时对提及的封装自己感觉并没有什么地方值得封装，因为事实上代码量并不是很多，对量不是很多的代码不能为了封装而封装吧，想了想它的需求，才明白应该提取公用的部分，将其封装起来。
+这里的方式是使用`behaviors`，`behavior`就类似`vue`中的`mixin`(自己没写过小程序，看了文档后感觉这两种东西作用非常相似，将两者做类比可以更方便自己对它的理解)
+
+### 借封装优化代码
