修改文件: 小程序触底加载更多的实现.md

--- a/小程序触底加载更多的实现.md
+++ b/小程序触底加载更多的实现.md
@@ -146,7 +146,9 @@ async onLoad (options) {
   },
 ```
 进入页面在没有触发触底事件时，应当加载一组数据进行正常的显示。所以选择在`onLoad`生命周期中进行。
+
 这里创建了`Products`类的实例`productModel`方便后续向后端发送请求获取数据。紧接着调用该实例的`getPorductList`方法，并传入请求页与每页显示数据条数获取第一组数据，并将其更新到data中。
+
 最后调用`lin-ui`提供的[瀑布流组件](http://doc.mini.7yue.pro/component/layout/water-flow.html#%E4%BD%BF%E7%94%A8%E6%96%B9%E6%B3%95)进行数据的渲染。
 
 ### 触底加载更多数据与请求的优化
@@ -198,7 +200,131 @@ async onLoad (options) {
 ### 封装的考虑
 上面的功能已经完成，但还可以做很多优化，比如最起码在`onLoad`和`onReachBottom`写很多代码看起来让人很不舒服。
 但更重要的并不是这个问题，而是我们这个触底请求数据可能要在多个页面中用到，如何只写一份代码就能让不同的页面使用这个功能就显得很重要了。
+
 在接触这个作业时对提及的封装自己感觉并没有什么地方值得封装，因为事实上代码量并不是很多，对量不是很多的代码不能为了封装而封装吧，想了想它的需求，才明白应该提取公用的部分，将其封装起来。
+
 这里的方式是使用`behaviors`，`behavior`就类似`vue`中的`mixin`(自己没写过小程序，看了文档后感觉这两种东西作用非常相似，将两者做类比可以更方便自己对它的理解)
 
-### 借封装优化代码
+### 借封装优化代码(踩坑之旅)
+1. `behavior` 不能在`Page`中使用
+2. `Page`有自己的用处，`Component`不能替代它，如触底函数在Component中是没有的
+3. `behavior`与`Component`的生命周期函数不同于`Page`
+
+虽然只列举了这几个问题，可能对于开发过小程序的人还不是坑，但是对自己来说就算坑了，踩坑和解决也花了不少功夫。
+
+**behavior的封装**
+
+``` javascript
+// /behaviors/loadmore.js
+import { Products } from '../model/ProductsTest.js';
+module.exports = Behavior({
+  behaviors: [],
+  data: {
+    loadingStatus: true,
+    loadingShow: false,
+    products: [],
+    productModel: null,
+    currentPage: 1,
+    pageCount: 5
+  },
+  async attached() {
+    this.initData()
+  },
+  methods: {
+    async initData() {
+      const productModel = new Products();
+      const products = await productModel.getPorductList({
+        count: this.data.pageCount,
+        page: this.data.currentPage
+      })
+      this.setData({
+        productModel,
+        products: products,
+      });
+      this.renderWaterFlow();
+    },
+    renderWaterFlow() {
+      wx.lin.renderWaterFlow(this.data.products.items, false, () => {
+        this.setData({
+          loadingShow: false,
+        })
+      })
+    },
+    handleReachBottom() {
+      if (!this.data.loadingShow) {
+        if (this.data.currentPage >= this.data.productModel.total_page) {
+          this.setData({
+            loadingShow: true,
+            loadingStatus: false
+          })
+        } else {
+          this.setData({
+            loadingShow: true,
+            currentPage: this.data.currentPage + 1,
+          })
+          setTimeout(() => {
+            this.getPorductList()
+          }, 3000)
+        }
+      }
+    },
+    async getPorductList() {
+      const products = await this.data.productModel.getPorductList({
+        count: this.data.pageCount,
+        page: this.data.currentPage
+      })
+      this.setData({
+        products,
+      })
+      this.renderWaterFlow();
+    }
+  },
+})
+
+```
+
+
+这里的封装其实就是将之前页面中的函数进行移植，首先将原来的数据可以完全剪切过来，之前页面的`renderWaterFlow`和`getPorductList`方法复制到`behavior`的`methods`字段中，onLoad中的代码可以完全提取出来写一个`initData()`方法，`onReachBottom`中的代码提取出来写成一个`handleReachBottom()`方法，将这两个方法也复制到`behavior`中的`methods`字段。到这里代码的移植工作就做完大部分了。
+
+然后看看获取第一组数据的执行时机，在`Page`中的时候是放在`onLoad`方法中的，现在应该放到`attached`方法中，`attached`是`behavior`的一个生命周期方法，`Component`中也有这个方法。
+
+然后比较重要的一件事就出现了，之前我们的代码都放到了`behavior`中，但是在Page中无法使用`behavior`，如果直接将Page变成`Component`，这将导致我们无法监听触底事件，所以只能创建一个`Compoent`，将Page中的组件复制过去。然后更改页面js的逻辑，传播触底事件
+
+``` html
+<f-loadmore reachBottom="{{reachBottom}}"></f-loadmore>
+```
+
+``` javascript
+  // /views/waterflow/waterflow.js
+  data: {
+    reachBottom: false
+  },
+  onReachBottom: function () {
+    this.setData({
+      reachBottom: true
+    })
+  },
+  
+  // /components/loadmore/index.js
+  properties: {
+    reachBottom: Boolean
+  },
+  observers: {
+    'reachBottom': function(val) {
+      console.log(val)
+      if(val) {
+        this.handleReachBottom();
+      }
+    }
+  },
+
+```
+
+说来也巧，微信中的数据的更新与Vue不同，当属性`reachBottom`更改为`true`之后，再次触底触发`reachBottom`重新setData，仍然设置为`true`，在组件监听`reachBottom`属性变化时仍然能够监听到。
+
+所以第一次设置`reachBottom`为false，虽然会触发组件中事件的监听，但由于触底时候会设置`reachBottom`为`true`，我们就可以将这次`false`过滤掉，如果触发过来的都是`true`，我们就认为触发了触底事件，然后执行`handleReachBottom`。
+
+这里可以直接在`Component`中执行引入过来的`behavior`,引入过来的`behavior`一旦被注册到当前组件，其中的各配置将都会与组件的配置项进行合并，所以可以直接使用。
+
+### 总结
+当前的做法只是一个简单的例子，有时候我们会很多地方需要调用不同的接口，但以上例子中的做法并不支持，你可以根据自己需要，将这个封装做得更加灵活，以达到适应自己项目的目的。
