修改文件: 小程序触底加载更多的实现.md

--- a/小程序触底加载更多的实现.md
+++ b/小程序触底加载更多的实现.md
@@ -17,7 +17,7 @@
 2. 封装：如何在多个页面应用同一套实现代码
 
 ## 功能的实现
-### 数据结构的确定
+### 1 数据结构的确定
 数据结构来源7七月老师的[(风袖API文档)](https://course.7yue.pro/lin/sleeve/1%20%E3%80%8A%E9%A3%8E%E8%A2%96%E3%80%8B%E5%85%A8%E6%A0%88%E8%AF%BEAPI%E6%96%87%E6%A1%A3.html#%E5%88%86%E9%A1%B5%E5%8F%82%E6%95%B0)
 ```json
 {
@@ -43,7 +43,7 @@
     ]
 }
 ```
-### ajax与后端的模拟
+### 2 ajax与后端的模拟
 ```javascript
 // /model/Products.js
 class Products {
@@ -122,7 +122,7 @@ data: {
 
 ```
 
-### 第一组数据的获取
+### 3 第一组数据的获取
 ```javascript
 async onLoad (options) {
     const productModel = new Products();
@@ -151,7 +151,7 @@ async onLoad (options) {
 
 最后调用`lin-ui`提供的[瀑布流组件](http://doc.mini.7yue.pro/component/layout/water-flow.html#%E4%BD%BF%E7%94%A8%E6%96%B9%E6%B3%95)进行数据的渲染。
 
-### 触底加载更多数据与请求的优化
+### 4 触底加载更多数据与请求的优化
 
 ``` javascript
   onReachBottom: function () {
@@ -197,7 +197,7 @@ async onLoad (options) {
 **连续请求的优化**
 上面提到先忽略`onReachBottom`最外层的if语句，这里来看看这个if语句解决了什么问题，上面代码中可以看到有两个`console`打印语句，一个是`触底`一个是`请求`，当网络稍微差的时候，我们可以在没有接收到请求数据的时候触发多次触底事件，这是不合理的，所以加了这个if语句，判断是否在loading了，如果在loading，则表明正在请求数据，就不应该再发送请求，否则再继续进行请求的逻辑。
 
-### 封装的考虑
+### 5 封装的考虑
 上面的功能已经完成，但还可以做很多优化，比如最起码在`onLoad`和`onReachBottom`写很多代码看起来让人很不舒服。
 但更重要的并不是这个问题，而是我们这个触底请求数据可能要在多个页面中用到，如何只写一份代码就能让不同的页面使用这个功能就显得很重要了。
 
