修改文件: 小程序触底加载更多的实现.md

--- a/小程序触底加载更多的实现.md
+++ b/小程序触底加载更多的实现.md
@@ -208,7 +208,7 @@ async onLoad (options) {
 
 这里的方式是使用`behaviors`，`behavior`就类似`vue`中的`mixin`(自己没写过小程序，看了文档后感觉这两种东西作用非常相似，将两者做类比可以更方便自己对它的理解)
 
-### 借封装优化代码(踩坑之旅)
+### 6 借封装优化代码(踩坑之旅)
 1. `behavior` 不能在`Page`中使用
 2. `Page`有自己的用处，`Component`不能替代它，如触底函数在Component中是没有的
 3. `behavior`与`Component`的生命周期函数不同于`Page`
