修改文件: 小程序触底加载更多的实现.md

--- a/小程序触底加载更多的实现.md
+++ b/小程序触底加载更多的实现.md
@@ -111,7 +111,7 @@ class Products {
 ```
 通过设置`show`属性来显示或隐藏loading组件，通过设置`loading`属性来选择显示loading的状态
 
-### data的确定
+### 3 data的确定
 ```javascript
 data: {
     loadingStatus: true,  // loading状态（加载中/无数据）的控制
@@ -124,7 +124,7 @@ data: {
 
 ```
 
-### 3 第一组数据的获取
+### 4 第一组数据的获取
 ```javascript
 async onLoad (options) {
     const productModel = new Products();
@@ -153,7 +153,7 @@ async onLoad (options) {
 
 最后调用`lin-ui`提供的[瀑布流组件](http://doc.mini.7yue.pro/component/layout/water-flow.html#%E4%BD%BF%E7%94%A8%E6%96%B9%E6%B3%95)进行数据的渲染。
 
-### 4 触底加载更多数据与请求的优化
+### 5 触底加载更多数据与请求的优化
 
 ``` javascript
   onReachBottom: function () {
@@ -200,7 +200,7 @@ async onLoad (options) {
 
 上面提到先忽略`onReachBottom`最外层的if语句，这里来看看这个if语句解决了什么问题，上面代码中可以看到有两个`console`打印语句，一个是`触底`一个是`请求`，当网络稍微差的时候，我们可以在没有接收到请求数据的时候触发多次触底事件，这是不合理的，所以加了这个if语句，判断是否在loading了，如果在loading，则表明正在请求数据，就不应该再发送请求，否则再继续进行请求的逻辑。
 
-### 5 封装的考虑
+### 6 封装的考虑
 上面的功能已经完成，但还可以做很多优化，比如最起码在`onLoad`和`onReachBottom`写很多代码看起来让人很不舒服。
 但更重要的并不是这个问题，而是我们这个触底请求数据可能要在多个页面中用到，如何只写一份代码就能让不同的页面使用这个功能就显得很重要了。
 
@@ -208,7 +208,7 @@ async onLoad (options) {
 
 这里的方式是使用`behaviors`，`behavior`就类似`vue`中的`mixin`(自己没写过小程序，看了文档后感觉这两种东西作用非常相似，将两者做类比可以更方便自己对它的理解)
 
-### 6 借封装优化代码(踩坑之旅)
+### 7 借封装优化代码(踩坑之旅)
 1. `behavior` 不能在`Page`中使用
 2. `Page`有自己的用处，`Component`不能替代它，如触底函数在Component中是没有的
 3. `behavior`与`Component`的生命周期函数不同于`Page`
@@ -329,5 +329,5 @@ module.exports = Behavior({
 
 这里可以直接在`Component`中执行引入过来的`behavior`,引入过来的`behavior`一旦被注册到当前组件，其中的各配置将都会与组件的配置项进行合并，所以可以直接使用。
 
-### 总结
+## 总结
 当前的做法只是一个简单的例子，有时候我们会很多地方需要调用不同的接口，但以上例子中的做法并不支持，你可以根据自己需要，将这个封装做得更加灵活，以达到适应自己项目的目的。
