修改文件: 小程序触底加载更多的实现.md

--- a/小程序触底加载更多的实现.md
+++ b/小程序触底加载更多的实现.md
@@ -96,7 +96,7 @@ class Products {
 * `_getDataTemplate`对数据格式进行组装，模拟后端对数据的处理，
 * `getPorductList`方法模拟请求后端数据，每次请求默认5条数据，可以配置请求数据条数与请求页数，最终将数据进行包装后返回一个promise。
 
-### loading组件的封装
+### 3 loading组件的封装
 一个项目的loading风格是统一的，这里选择了易用性而舍弃了灵活性。
 ```html
 <view class="loading-container" wx:if="{{show}}">
@@ -111,7 +111,7 @@ class Products {
 ```
 通过设置`show`属性来显示或隐藏loading组件，通过设置`loading`属性来选择显示loading的状态
 
-### 3 data的确定
+### 4 data的确定
 ```javascript
 data: {
     loadingStatus: true,  // loading状态（加载中/无数据）的控制
@@ -124,7 +124,7 @@ data: {
 
 ```
 
-### 4 第一组数据的获取
+### 5 第一组数据的获取
 ```javascript
 async onLoad (options) {
     const productModel = new Products();
@@ -153,7 +153,7 @@ async onLoad (options) {
 
 最后调用`lin-ui`提供的[瀑布流组件](http://doc.mini.7yue.pro/component/layout/water-flow.html#%E4%BD%BF%E7%94%A8%E6%96%B9%E6%B3%95)进行数据的渲染。
 
-### 5 触底加载更多数据与请求的优化
+### 6 触底加载更多数据与请求的优化
 
 ``` javascript
   onReachBottom: function () {
@@ -200,7 +200,7 @@ async onLoad (options) {
 
 上面提到先忽略`onReachBottom`最外层的if语句，这里来看看这个if语句解决了什么问题，上面代码中可以看到有两个`console`打印语句，一个是`触底`一个是`请求`，当网络稍微差的时候，我们可以在没有接收到请求数据的时候触发多次触底事件，这是不合理的，所以加了这个if语句，判断是否在loading了，如果在loading，则表明正在请求数据，就不应该再发送请求，否则再继续进行请求的逻辑。
 
-### 6 封装的考虑
+### 7 封装的考虑
 上面的功能已经完成，但还可以做很多优化，比如最起码在`onLoad`和`onReachBottom`写很多代码看起来让人很不舒服。
 但更重要的并不是这个问题，而是我们这个触底请求数据可能要在多个页面中用到，如何只写一份代码就能让不同的页面使用这个功能就显得很重要了。
 
@@ -208,7 +208,7 @@ async onLoad (options) {
 
 这里的方式是使用`behaviors`，`behavior`就类似`vue`中的`mixin`(自己没写过小程序，看了文档后感觉这两种东西作用非常相似，将两者做类比可以更方便自己对它的理解)
 
-### 7 借封装优化代码(踩坑之旅)
+### 8 借封装优化代码(踩坑之旅)
 1. `behavior` 不能在`Page`中使用
 2. `Page`有自己的用处，`Component`不能替代它，如触底函数在Component中是没有的
 3. `behavior`与`Component`的生命周期函数不同于`Page`
